perf(build): 本地构建 Tailwind，拆分样式与脚本并优化缓存
将 index.html 内联样式迁移至 public/custom.css；Tailwind 工具类改为构建产物
  public/assets/tailwind.css

将内联脚本迁移至 src/app.js 并输出 public/assets/app.js，减少首屏阻塞

新增 tailwind.config.js 与构建脚本（npm run
  build），Cloudflare Pages 输出目录仍为 public

新增 public/_headers：assets 与静态图片长缓存，index.html 走 revalidate

优化 /api/config：ETag +
  Cache-Control，减少新标签页重复请求

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 .spec-workflow/templates/tasks-template.md
 .spec-workflow/templates/tech-template.md
 .spec-workflow/user-templates/README.md
+
+node_modules/
+.wrangler/
+public/assets/
+postcss.config.cjs
+src/styles.css
